@@ -1,0 +1,6 @@
+# theme name
+theme=upstream
+# penguin theme likelihood in percent; -1 = auto
+penguin=0
+# show welcome animation (cdrom boot only)
+welcome=0
