@@ -1,3 +1,5 @@
+10/4/2008:	v4.0.3
+	- gfxboot can handle themes & translations
 	- fixed typo in gfxboot.cfg
 
 8/4/2008:	v4.0.2
